src/main/java/com/github/crhunter/maplang/MaplangParser.java
// Generated from Maplang.g4 by ANTLR 4.7.2
package com.github.crhunter.maplang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MaplangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, COMPUTE=2, END_COMPUTE=3, OR=4, IF=5, END_IF=6, ELSE=7, MOVE=8, 
		THEN=9, TO=10, CONCAT=11, AS=12, NOT=13, POS=14, THRU=15, EQUALCHAR=16, 
		NOTEQUAL=17, GREATERTHAN=18, LESSTHAN=19, GREATEREQUAL=20, LESSEQUAL=21, 
		PLUSCHAR=22, MINUSCHAR=23, ASTERISK=24, DOUBLEASTERISK=25, SLASHCHAR=26, 
		LEFTPAREN=27, RIGHTPAREN=28, DOT=29, STRINGLITERAL=30, INTEGERLITERAL=31, 
		NUMERICLITERAL=32, IDENTIFIER=33, NEWLINE=34, WS=35;
	public static final int
		RULE_topUnit = 0, RULE_statement = 1, RULE_moveStatement = 2, RULE_moveToStatement = 3, 
		RULE_moveToSendingArea = 4, RULE_concatStatement = 5, RULE_concatToStatement = 6, 
		RULE_concatExtraToStatement = 7, RULE_concatToSendingArea = 8, RULE_concatAsStatement = 9, 
		RULE_concatAsSendingArea = 10, RULE_ifStatement = 11, RULE_ifThen = 12, 
		RULE_ifElse = 13, RULE_condition = 14, RULE_andOrCondition = 15, RULE_simpleCondition = 16, 
		RULE_relationCondition = 17, RULE_relationArithmeticComparison = 18, RULE_relationCombinedComparison = 19, 
		RULE_relationCombinedCondition = 20, RULE_relationalOperator = 21, RULE_computeStatement = 22, 
		RULE_arithmeticExpression = 23, RULE_plusMinus = 24, RULE_multDivs = 25, 
		RULE_multDiv = 26, RULE_powers = 27, RULE_power = 28, RULE_basis = 29, 
		RULE_identifier = 30, RULE_refIdentifier = 31, RULE_arrayIdentifier = 32, 
		RULE_literal = 33, RULE_numericLiteral = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"topUnit", "statement", "moveStatement", "moveToStatement", "moveToSendingArea", 
			"concatStatement", "concatToStatement", "concatExtraToStatement", "concatToSendingArea", 
			"concatAsStatement", "concatAsSendingArea", "ifStatement", "ifThen", 
			"ifElse", "condition", "andOrCondition", "simpleCondition", "relationCondition", 
			"relationArithmeticComparison", "relationCombinedComparison", "relationCombinedCondition", 
			"relationalOperator", "computeStatement", "arithmeticExpression", "plusMinus", 
			"multDivs", "multDiv", "powers", "power", "basis", "identifier", "refIdentifier", 
			"arrayIdentifier", "literal", "numericLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'='", null, "'>'", "'<'", "'>='", "'<='", "'+'", 
			"'-'", "'*'", "'**'", "'/'", "'('", "')'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "COMPUTE", "END_COMPUTE", "OR", "IF", "END_IF", "ELSE", 
			"MOVE", "THEN", "TO", "CONCAT", "AS", "NOT", "POS", "THRU", "EQUALCHAR", 
			"NOTEQUAL", "GREATERTHAN", "LESSTHAN", "GREATEREQUAL", "LESSEQUAL", "PLUSCHAR", 
			"MINUSCHAR", "ASTERISK", "DOUBLEASTERISK", "SLASHCHAR", "LEFTPAREN", 
			"RIGHTPAREN", "DOT", "STRINGLITERAL", "INTEGERLITERAL", "NUMERICLITERAL", 
			"IDENTIFIER", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Maplang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MaplangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TopUnitContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TopUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterTopUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitTopUnit(this);
		}
	}

	public final TopUnitContext topUnit() throws RecognitionException {
		TopUnitContext _localctx = new TopUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_topUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << MOVE) | (1L << CONCAT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public MoveStatementContext moveStatement() {
			return getRuleContext(MoveStatementContext.class,0);
		}
		public ConcatStatementContext concatStatement() {
			return getRuleContext(ConcatStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MOVE:
				{
				setState(75);
				moveStatement();
				}
				break;
			case CONCAT:
				{
				setState(76);
				concatStatement();
				}
				break;
			case IF:
				{
				setState(77);
				ifStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveStatementContext extends ParserRuleContext {
		public TerminalNode MOVE() { return getToken(MaplangParser.MOVE, 0); }
		public MoveToStatementContext moveToStatement() {
			return getRuleContext(MoveToStatementContext.class,0);
		}
		public MoveStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterMoveStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitMoveStatement(this);
		}
	}

	public final MoveStatementContext moveStatement() throws RecognitionException {
		MoveStatementContext _localctx = new MoveStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moveStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(MOVE);
			setState(81);
			moveToStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveToStatementContext extends ParserRuleContext {
		public MoveToSendingAreaContext moveToSendingArea() {
			return getRuleContext(MoveToSendingAreaContext.class,0);
		}
		public TerminalNode TO() { return getToken(MaplangParser.TO, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public MoveToStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveToStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterMoveToStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitMoveToStatement(this);
		}
	}

	public final MoveToStatementContext moveToStatement() throws RecognitionException {
		MoveToStatementContext _localctx = new MoveToStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moveToStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			moveToSendingArea();
			setState(84);
			match(TO);
			setState(85);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveToSendingAreaContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public MoveToSendingAreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveToSendingArea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterMoveToSendingArea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitMoveToSendingArea(this);
		}
	}

	public final MoveToSendingAreaContext moveToSendingArea() throws RecognitionException {
		MoveToSendingAreaContext _localctx = new MoveToSendingAreaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moveToSendingArea);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				identifier();
				}
				break;
			case STRINGLITERAL:
			case INTEGERLITERAL:
			case NUMERICLITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatStatementContext extends ParserRuleContext {
		public TerminalNode CONCAT() { return getToken(MaplangParser.CONCAT, 0); }
		public ConcatToStatementContext concatToStatement() {
			return getRuleContext(ConcatToStatementContext.class,0);
		}
		public ConcatAsStatementContext concatAsStatement() {
			return getRuleContext(ConcatAsStatementContext.class,0);
		}
		public List<ConcatExtraToStatementContext> concatExtraToStatement() {
			return getRuleContexts(ConcatExtraToStatementContext.class);
		}
		public ConcatExtraToStatementContext concatExtraToStatement(int i) {
			return getRuleContext(ConcatExtraToStatementContext.class,i);
		}
		public ConcatStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterConcatStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitConcatStatement(this);
		}
	}

	public final ConcatStatementContext concatStatement() throws RecognitionException {
		ConcatStatementContext _localctx = new ConcatStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_concatStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(CONCAT);
			setState(92);
			concatToStatement();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TO) {
				{
				{
				setState(93);
				concatExtraToStatement();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			concatAsStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatToStatementContext extends ParserRuleContext {
		public List<ConcatToSendingAreaContext> concatToSendingArea() {
			return getRuleContexts(ConcatToSendingAreaContext.class);
		}
		public ConcatToSendingAreaContext concatToSendingArea(int i) {
			return getRuleContext(ConcatToSendingAreaContext.class,i);
		}
		public TerminalNode TO() { return getToken(MaplangParser.TO, 0); }
		public ConcatToStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatToStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterConcatToStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitConcatToStatement(this);
		}
	}

	public final ConcatToStatementContext concatToStatement() throws RecognitionException {
		ConcatToStatementContext _localctx = new ConcatToStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_concatToStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			concatToSendingArea();
			setState(102);
			match(TO);
			setState(103);
			concatToSendingArea();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatExtraToStatementContext extends ParserRuleContext {
		public TerminalNode TO() { return getToken(MaplangParser.TO, 0); }
		public ConcatToSendingAreaContext concatToSendingArea() {
			return getRuleContext(ConcatToSendingAreaContext.class,0);
		}
		public ConcatExtraToStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatExtraToStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterConcatExtraToStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitConcatExtraToStatement(this);
		}
	}

	public final ConcatExtraToStatementContext concatExtraToStatement() throws RecognitionException {
		ConcatExtraToStatementContext _localctx = new ConcatExtraToStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_concatExtraToStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(TO);
			setState(106);
			concatToSendingArea();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatToSendingAreaContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ConcatToSendingAreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatToSendingArea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterConcatToSendingArea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitConcatToSendingArea(this);
		}
	}

	public final ConcatToSendingAreaContext concatToSendingArea() throws RecognitionException {
		ConcatToSendingAreaContext _localctx = new ConcatToSendingAreaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_concatToSendingArea);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				identifier();
				}
				break;
			case STRINGLITERAL:
			case INTEGERLITERAL:
			case NUMERICLITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatAsStatementContext extends ParserRuleContext {
		public TerminalNode AS() { return getToken(MaplangParser.AS, 0); }
		public ConcatAsSendingAreaContext concatAsSendingArea() {
			return getRuleContext(ConcatAsSendingAreaContext.class,0);
		}
		public ConcatAsStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatAsStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterConcatAsStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitConcatAsStatement(this);
		}
	}

	public final ConcatAsStatementContext concatAsStatement() throws RecognitionException {
		ConcatAsStatementContext _localctx = new ConcatAsStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_concatAsStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(AS);
			setState(113);
			concatAsSendingArea();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatAsSendingAreaContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ConcatAsSendingAreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatAsSendingArea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterConcatAsSendingArea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitConcatAsSendingArea(this);
		}
	}

	public final ConcatAsSendingAreaContext concatAsSendingArea() throws RecognitionException {
		ConcatAsSendingAreaContext _localctx = new ConcatAsSendingAreaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_concatAsSendingArea);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MaplangParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public IfThenContext ifThen() {
			return getRuleContext(IfThenContext.class,0);
		}
		public TerminalNode END_IF() { return getToken(MaplangParser.END_IF, 0); }
		public IfElseContext ifElse() {
			return getRuleContext(IfElseContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IF);
			setState(118);
			condition();
			setState(119);
			ifThen();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(120);
				ifElse();
				}
			}

			setState(123);
			match(END_IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfThenContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(MaplangParser.THEN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfThenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifThen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterIfThen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitIfThen(this);
		}
	}

	public final IfThenContext ifThen() throws RecognitionException {
		IfThenContext _localctx = new IfThenContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ifThen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THEN) {
				{
				setState(125);
				match(THEN);
				}
			}

			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				statement();
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << MOVE) | (1L << CONCAT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfElseContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(MaplangParser.ELSE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterIfElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitIfElse(this);
		}
	}

	public final IfElseContext ifElse() throws RecognitionException {
		IfElseContext _localctx = new IfElseContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ifElse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ELSE);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << MOVE) | (1L << CONCAT))) != 0)) {
				{
				{
				setState(134);
				statement();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public SimpleConditionContext simpleCondition() {
			return getRuleContext(SimpleConditionContext.class,0);
		}
		public List<AndOrConditionContext> andOrCondition() {
			return getRuleContexts(AndOrConditionContext.class);
		}
		public AndOrConditionContext andOrCondition(int i) {
			return getRuleContext(AndOrConditionContext.class,i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaplangListener ) ((MaplangListener)listener).exitCondition(this);
		}
	}
